# FastFitApi

./: Dockerfile  Procfile  README.md  build.sh  docker-compose.yml  dune-project  entrypoint.sh  fastfit.opam  fastfit.sql  go.mod  main.go
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/default/: fastfit.install
_build/default/models/: client.pp.ml  client.pp.mli  exercice.pp.ml  exercice.pp.mli  models.cma  models.cmxa  models.cmxs  models.pp.ml  models.pp.mli  models__.ml-gen  personal.pp.ml  personal.pp.mli  worksheet.ml  worksheet.pp.ml  worksheet.pp.mli
_opam/.opam-switch/: environment  switch-config  switch-state
_opam/.opam-switch/config/: ocaml-system.config  ocaml.config
_opam/.opam-switch/install/: angstrom.changes  astring.changes  base.changes  base64.changes  bigarray-compat.changes  bigstringaf.changes  biniou.changes  caqti-driver-postgresql.changes  caqti-lwt.changes  caqti.changes  cmdliner.changes  cppo.changes  csexp.changes  cstruct.changes  ctypes.changes  dune-configurator.changes  dune.changes  easy-format.changes  eqaf.changes  faraday-lwt-unix.changes  faraday-lwt.changes  faraday.changes  fmt.changes  hmap.changes  httpaf-lwt-unix.changes  httpaf.changes  integers.changes  logs.changes  lwt.changes  (+38 more)
_opam/lib/: findlib.conf
dbcontroller/: dbcontroller.ml  dbcontroller.mli  dune
endpoints/: dune  endpoints.ml  endpoints.mli
models/: client.ml  client.mli  dune  exercice.ml  exercice.mli  go.mod  models.go  models.ml  personal.ml  personal.mli  worksheet.ml  worksheet.mli
(+2409 files in other folders)
