opam-version: "2.0"
name: "fastfit"
version: "0.0.1"
authors: [
    "Tiago Onofre"
    "Amanda Albuquerque"
]
maintainer: "Tiago Onofre"
homepage: "https://github.com/OnofreTZK/FastFitApi"
bug-reports: "https://github.com/OnofreTZK/FastFitApi/issues"
depends: [
    "opium"
    "caqti"
    "caqti-lwt"
    "caqti-driver-postgresql"
    "uuidm"
    "ppx_rapper_lwt"
    "lwt_ppx"
    "ppx_rapper"
    "ppx_deriving_yojson"
    "sha"
    "ocaml" {(>= "4.12") & (<= "4.13.1")}
]
build: [
    ["dune" "build" "-p" name]
]
synopsis: "Fastfit MVP API"
